# mmo-videogame-backend

./: .gitignore  README.md  requirements.txt
auth_service/: pom.xml
auth_service/src/main/java/io/mmo/authentication/: Application.java
auth_service/src/main/java/io/mmo/authentication/business/: JwtProperties.java  JwtService.java
auth_service/src/main/java/io/mmo/authentication/database/: UserCredentials.java  UserCredentialsRepository.java
auth_service/src/main/resources/: application.yml
auth_service/src/test/java/io/mmo/authentication/: AuthControllerTest.java
devops/: deploy_and_test.py  deploy_minikube.py
devops/integration/: conftest.py  python_client.py  test_authentication.py
devops/k8s/: auth.yaml  game.yaml  ingress.yaml  secrets.yaml
game/: .clang-format  CMakeLists.txt  vcpkg.json
game/common/: CMakeLists.txt
game/common/include/messaging/: ClientMessageEnvelope.hpp  ProtobufSerializer.hpp  ThreadSafeQueue.hpp
game/common/proto/: client_messages.proto  server_messages.proto
game/game_server/include/networking/: JwtHandshakeInterceptor.hpp  JwtValidator.hpp  SessionMetadata.hpp
game/tests/: CMakeLists.txt
game/tests/common/messaging/: ThreadSafeQueueTest.cpp
game/tests/game_server/networking/: JwtHandshakeInterceptorTest.cpp  JwtValidatorTest.cpp  SessionMetadataTest.cpp
game_service/: pom.xml
game_service/src/main/java/io/mmo/: JwtProperties.java  JwtValidator.java  WebSocketConfig.java
game_service/src/main/java/io/mmo/websocket/: JwtHandshakeInterceptor.java  WebSocketHandler.java
game_service/src/main/resources/: application.yml
game_service/src/test/java/io/mmo/: JwtValidatorTest.java
game_service/src/test/java/io/mmo/websocket/: JwtHandshakeInterceptorTest.java  WebSocketHandlerTest.java  WebSocketSessionsManagerTest.java
infra/: deploy.py
infra/deployment/: minikube.py
infra/k8s/: auth.yaml  game.yaml  secrets.yaml
services/auth_service/src/main/resources/: application.yml
services/game_service/: Dockerfile
services/game_service/src/main/java/io/mmo/: Application.java  JwtValidationException.java  WebSocketConfig.java
services/game_service/src/main/resources/: application.yml
services/game_service/src/test/java/io/mmo/: JwtValidatorTest.java
(+37 files in other folders)
